apply overflow fix to hr as well

--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -472,7 +472,7 @@ $empty-star:'\2606';
 }
 
 .wcsc-summary-wrap{
-    ol, ul{
+    ol, ul, hr{
         width:auto;
         overflow:hidden;
     }
